# stm32f401-rtic-starter

./: .embed.toml  Cargo.toml  README.md  openocd.cfg  openocd.gdb
src/: main.rs
